<resources>
    <string name="app_name">LocationManager</string>
    <string name="sear_data">查询数据(从1开始)</string>
    <string name="del_data">请输入您想删除的历史第几次数据</string>
    <string name="compute">计算距离</string>
    <string name="load">加载</string>
    <string name="save">保存</string>
    <string name="goToHere">街景</string>
    <string name="search_location">查找</string>
    <string name="et_searchlocation">请输入您想查找</string>
    <string name="detail_button">详情</string>
    <string name="loc_gap">定位间隔</string>
    <string name="from_email">您的邮箱</string>
    <string name="to_email">您想发的邮箱</string>
    <string name="server">邮箱服务器</string>
    <string name="pwd">邮箱密码</string>
    <string name="subject">邮件主题</string>

    <string-array name="spinner">
        <item>按定位时间排序</item>
        <item>按时长排序</item>
        <item>按距离排序</item>
        <item>按步数排序</item>
        <item>缩略图显示</item>
        <item>显示走路记录</item>
        <item>显示骑车记录</item>
    </string-array>
</resources>
